# rag_document_assistant

./: ingestion.py  pyproject.toml
backend/: core.py
