[project]
name = "rag-document-assistant"
version = "0.1.0"
description = "RAG document assistant"
requires-python = ">=3.11,<3.12"
dependencies = [
    "beautifulsoup4",
    "black",
    "tiktoken",
    "openai",
    "unstructured",
    "nltk",
    "fastapi",
    "jinja2",
    "uvicorn",
    "streamlit",
    "streamlit-chat",
    "tqdm",
    "isort",
    "langchainhub",
    "firecrawl-py",
    "langchain-community",
    "langsmith",
    "pillow",
    "langchain-tavily",
    "langchain-pinecone",
    "certifi",
    "langchain-chroma",
    "python-dotenv",
    "langchain>=1.3.1",
    "langchain-text-splitters>=1.1.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[tool.uv]
package = false
prerelease = "allow"
